@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0bbc44e9057abd9b66619c79584fbb8a3b1bcea1 ChangeLog
+SHA1 088e18a9e99a10125fb284595a9bfc315088c8e6 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 3c2182f73d3250e4b00fb136066b2bee292cd014 META.yml
-SHA1 eed7649fa4de42c0799dd363bdf40be949217eca Makefile.PL
+SHA1 1c11f5973e69ae1998c550e61106052bfa6513a1 META.yml
+SHA1 39ddc1b46ead4d07a9872c839c8e38b0775eb0fd Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 39557507f4ae86c654fa296ca1f8999e33aa764e lib/Net/FullAuto.pm
+SHA1 947f7e0c4a030fe293bc41c2211b4ea667388e24 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 a6b31bc5f4cd8e45c1a9e1bfee72c780aec7f503 lib/Net/FullAuto/Distro/fa_code.pm
@@ -51,7 +51,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk7Wl5YACgkQdsVAdUjO9Ik57QCcCT4/Ia1/nk1jfv1sDmXiXIFF
-KQoAnR6rgCGmBceK5I8cp3C1kY121l3J
-=HsDi
+iEYEARECAAYFAk7YVcsACgkQdsVAdUjO9IkL3gCfVa9pYUoGABzGTAqi+9E3SS3a
+iRAAoI4L3XDHKppZ60zjPUoPa/ICJZZ0
+=CY4E
 -----END PGP SIGNATURE-----
